Closed
Bug 1296996
Opened 9 years ago
Closed 9 years ago
Return of crash in mozilla::gl::SharedSurface_EGLImage::ProducerReleaseImpl: "MOZ_RELEASE_ASSERT(false) (GFX: Non-recycleable should not Fence twice.)"
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla51
Tracking | Status | |
---|---|---|
firefox50 | --- | unaffected |
firefox51 | --- | fixed |
People
(Reporter: n.nethercote, Assigned: eflores)
References
Details
(Keywords: crash, regression, topcrash, Whiteboard: [webvr])
Crash Data
Attachments
(1 file)
953 bytes,
patch
|
jgilbert
:
review+
|
Details | Diff | Splinter Review |
Bug 1238541 fixed the previous incarnation of this about 7 months ago, but it's just spiked again, e.g.: https://crash-stats.mozilla.com/report/index/7b505988-d473-49f5-a6b1-099f92160821.
The first Nightly affected is 20160819080504. There have been 56 crashes since then, making it the #1 Fennec topcrash for the past 7 days.
jgilbert, you fixed the previous bug -- any ideas what might have happened? Thanks.
Flags: needinfo?(jgilbert)
Jeff, did you expect this to be fixed now with bug 1285692? I still see reports as of today's Nightly.
Flags: needinfo?(jgilbert)
This is WebVR related?
Crashes by build ID:
> 20160824030337 7 4.86 %
> 20160823072522 2 1.39 %
> 20160823030224 2 1.39 %
> 20160822064441 12 8.33 %
> 20160821030226 69 47.92 %
> 20160820030224 34 23.61 %
> 20160819080504 14 9.72 %
Assignee | ||
Comment 4•9 years ago
|
||
Got a consistent repro for this. Running mozregression yields:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=e7bc8b475703876a404ffb4b644cc8a2e0879898&tochange=7e665764ca147c5faaada000a08ef4329873a106
Thanks Edwin - can you look for the fix as well?
Assignee: nobody → edwin
Flags: needinfo?(edwin)
Version: 46 Branch → 51 Branch
![]() |
||
Comment 6•9 years ago
|
||
This seems to happen on many Android devices, but FWIW, I can reproduce with recent Nightlies on my Nexus 10 by loading https://lantea.kairo.at/ (which uses WebGL).
Updated•9 years ago
|
Comment 7•9 years ago
|
||
Oh actually given the regression range and the fact that jgilbert made this depend on bug 1285692 (which is *in* the regression range), I assume he meant to make this bug *block* bug 1285692 as the source of the regression.
Assignee | ||
Comment 8•9 years ago
|
||
Updated•9 years ago
|
Attachment #8790643 -
Flags: review?(jgilbert) → review+
Pushed by eflores@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/ee1070c230bd
Use ProducerRead{Acquire/Release} in ReadBuffer::Create - r=jgilbert
Comment 10•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•