Bug 1296996 - Use ProducerRead{Acquire/Release} in ReadBuffer::Create - r=jgilbert